--- a/ormconfig.json
+++ b/ormconfig.json
@@ -6,6 +6,5 @@
   "password": "25021998bszl_",
   "database": "sistemas2020",
   "entities": ["dist/entity/**/*.js"],
-  "logging": false,
-  "synchronize": true
+  "logging": false
 }
